# cpp-image-processor

./: .gitignore  Add Horizontal_skewFilter  BloodyFilter.cpp  BloodyFilter.h  BlurFilter.cpp  BlurFilter.h  BrightnessFilter.cpp  BrightnessFilter.h  CMakeLists.txt  ConvolutionFilter.cpp  ConvolutionFilter.h  CropFiter.cpp  CropFiter.h  EdgeDetectionFilter.cpp  EdgeDetectionFilter.h  Filter.cpp  Filter.h  FlipFilter.cpp  FlipFilter.h  FrameFilter.cpp  FrameFilter.h  GrassFilter.cpp  GrassFilter.h  GreyFilter.cpp  GreyFilter.h  Image Processing.cpp  Image processing.sln  InfraredFilter.cpp  InfraredFilter.h  InvertFilter.cpp  InvertFilter.h  Main.cpp  MergeFilter.cpp  MergeFilter.h  NightFilter.cpp  NightFilter.h  OilPaintingFilter.cpp  OilPaintingFilter.h  PaintingFilter.cpp  PaintingFilter.h  (+22 more)
include/core/: CurrentImage.h  Menu.h
include/filters/: ArtisticBrush.h  Bloody.h  Blur.h  Brightness.h  BwFilter.h  ConvolutionFilter.h  Crop.h  EdgeDetection.h  Filter.h  Flip.h  Frame.h  Grass.h  GrayscaleFilter.h  GreyScale.h  HeatMap.h  Infrared.h  Invert.h  InvertFilter.h  Merge.h  Night.h  OilPainting.h  OldPhoto.h  OldTV.h  Resize.h  Rotate.h  STRUCT.h  Skewing.h  Sky.h  Sunlight.h  WhiteAndBlack.h  gama.h  saturation.h
include/utils/: Colors.h  Utils.h
src/: Filter_Class.h  main  main.cpp  stb_image.cpp
src/core/: CurrentImage.cpp  Menu.cpp
src/filters/: ArtisticBrush.cpp  BWFilter.cpp  Bloody.cpp  Blur.cpp  Brightness.cpp  Crop.cpp  EdgeDetection.cpp  Filter.cpp  Flip.cpp  Frame.cpp  Grass.cpp  GrayScaleFilter.cpp  GreyScale.cpp  HeatMap.cpp  Infrared.cpp  Sky.cpp  (+14 more)
(+6 files in other folders)
